# WordWing

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
legacy-gtk/: Cargo.toml  README.md
legacy-gtk/src/: popup_window.rs  translator.rs
packaging/systemd/: install-user-service.sh  wordwing-user.service
scripts/: install-or-update.sh  install-ubuntu-tauri-deps.sh
src/: App.tsx  main.rs  main.tsx  mainWindowTray.ts  overlay-main.tsx  popup_window.rs  selection_monitor.rs  text_replacer.rs  translator.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: wordwing.toml
src-tauri/prompts/: weekly_article.txt
src-tauri/src/: lib.rs  main.rs  recent_translations.rs  selection.rs  settings.rs  todo.rs  todo_notify.rs  translate.rs  tray.rs  vocabulary.rs  wayland_shortcut.rs  weekly_article.rs
src-tauri/src/storage/: migrate.rs  mod.rs
src/components/: PlainDateTimeFields.tsx
src/hooks/: useTranslateHotkeyLabel.ts
src/layout/: AppShell.tsx  Sidebar.tsx
src/lib/: datetimeInput.ts
src/overlay/: TranslateOverlay.tsx  translate-overlay.css
src/pages/: SettingsPage.tsx
src/pages/english/: CollectionPage.tsx  ReviewPage.tsx  VocabularyPage.tsx  WeeklyPage.tsx
src/pages/todo/: ItemsPage.tsx  SchedulesPage.tsx
src/styles/: global.css
