[package]
name = "WordWing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
x11-clipboard = "0.7"
gtk = "0.18"
gdk = "0.18"
tracing = "0.1.41"
tracing-subscriber = "0.3"
x11rb = "0.13.2"
